--- a/docs/_sass/color_schemes/colors.scss
+++ b/docs/_sass/color_schemes/colors.scss
@@ -56,7 +56,7 @@ $red-000: #f77e7e !default;
 $red-100: #f96e65 !default;
 $red-200: #e94c4c !default;
 $red-300: #dd2e2e !default;
-$turquoise-000: #70DAD3 !default;
+$turquoise-000: #70dad3 !default;
 $body-background-color: $white !default;
 $sidebar-color: $grey-lt-000 !default;
 $search-background-color: $white !default;
