--- a/docs/_sass/color_schemes/colors.scss
+++ b/docs/_sass/color_schemes/colors.scss
@@ -44,8 +44,8 @@ $blue-000: #2c84fa !default;
 $blue-100: #2869e6 !default;
 $blue-200: #264caf !default;
 $blue-300: #183385 !default;
-$green-000: #41d693 !default;
-$green-100: #11b584 !default;
+$green-000: #70dad3 !default;
+$green-100: #70dad3 !default;
 $green-200: #009c7b !default;
 $green-300: #026e57 !default;
 $yellow-000: #ffeb82 !default;
@@ -56,7 +56,6 @@ $red-000: #f77e7e !default;
 $red-100: #f96e65 !default;
 $red-200: #e94c4c !default;
 $red-300: #dd2e2e !default;
-$turquoise-000: #70dad3 !default;
 $body-background-color: $white !default;
 $sidebar-color: $grey-lt-000 !default;
 $search-background-color: $white !default;
@@ -67,8 +66,8 @@ $body-text-color: $grey-dk-100 !default;
 $body-heading-color: $grey-dk-300 !default;
 $search-result-preview-color: $grey-dk-000 !default;
 $nav-child-link-color: $grey-dk-100 !default;
-$link-color: $turquoise-000 !default;
-$btn-primary-color: $turquoise-000 !default;
+$link-color: $green-000 !default;
+$btn-primary-color: $green-000 !default;
 $base-button-color: #f7f7f7 !default;
 
 // Spacing
