--- a/docs/_sass/color_schemes/colors.scss
+++ b/docs/_sass/color_schemes/colors.scss
@@ -1,7 +1,7 @@
 ---
 ---
-$green-000: #70dad3 !default;
-$link-color: $green-000 !default;
-$btn-primary-color: $green-000 !default;
+$green-000: #70dad3;
+$link-color: $green-000;
+$btn-primary-color: $green-000;
 
 @import "{{ site.theme }}";
